Bug fix and Build a new Feature

--- a/single.html
+++ b/single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Clyde - Free Bootstrap 4 Template by Colorlib</title>
+  <title>Blog | Jitendra Sahu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -23,7 +23,8 @@
  
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
    <div class="container">
-     <a class="navbar-brand" href="index.html">Clyde<span>.</span></a>
+    <img src="images/logo.png" height="70" style="margin: 5px; border-radius: 15%;" /> 
+     <a class="navbar-brand" href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;Jitendra Sahu</a>
      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
        <span class="oi oi-menu"></span> Menu
      </button>
@@ -42,7 +43,7 @@
    </div>
  </nav>
  
- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_4.jpg');" data-stellar-background-ratio="0.5">
+ <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_4.jpg');" data-stellar-background-ratio="0.1">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -85,50 +86,50 @@
         
         <div class="about-author d-flex p-4 bg-light">
           <div class="bio mr-5">
-            <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
+            <img src="images/bg_three.png" alt="Image placeholder" class="img-fluid mb-4" style="border-radius: 50%;">
           </div>
           <div class="desc">
-            <h3>George Washington</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+            <h3>Jitendra Sahu</h3>
+            <p>My name is Jitendra Sahu, and I am a passionate Software Developer specializing in Android and iOS app development. With a strong background in software engineering and a keen eye for detail, I strive to create high-quality and user-friendly mobile applications. I am dedicated to staying updated with the latest technologies and trends in the industry, ensuring that I deliver innovative and cutting-edge solutions to my clients. With a focus on quality, reliability, and customer satisfaction, I am committed to turning ideas into successful and impactful digital experiences.</p>
           </div>
         </div>
 
 
         <div class="pt-5 mt-5">
-          <h4 class="mb-5 font-weight-bold">6 Comments</h4>
+          <h4 class="mb-5 font-weight-bold">678 Comments</h4>
           <ul class="comment-list">
             <li class="comment">
               <div class="vcard bio">
-                <img src="images/person_1.jpg" alt="Image placeholder">
+                <img src="images/user.png" alt="Image placeholder">
               </div>
               <div class="comment-body">
-                <h3>John Doe</h3>
+                <h3>Mr. Ravi Gupta</h3>
                 <div class="meta">July 03, 2020 at 2:21pm</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                <p>I am truly impressed with the level of professionalism and expertise showcased in your project blog. The attention to detail and the innovative solutions you've implemented are commendable. It's evident that you go above and beyond to deliver exceptional results. Great job!</p>
                 <p><a href="#" class="reply">Reply</a></p>
               </div>
             </li>
 
             <li class="comment">
               <div class="vcard bio">
-                <img src="images/person_1.jpg" alt="Image placeholder">
+                <img src="images/user.png" alt="Image placeholder">
               </div>
               <div class="comment-body">
-                <h3>John Doe</h3>
+                <h3>Ms. Priya Sharma</h3>
                 <div class="meta">July 03, 2020 at 2:21pm</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                <p>Your project blog has been a game-changer for me. The insights and lessons shared have given me a fresh perspective on tackling similar challenges in my own projects. I appreciate the transparency and the practical tips you provide. It's inspiring to see the successful outcomes you've achieved!</p>
                 <p><a href="#" class="reply">Reply</a></p>
               </div>
 
               <ul class="children">
                 <li class="comment">
                   <div class="vcard bio">
-                    <img src="images/person_1.jpg" alt="Image placeholder">
+                    <img src="images/user.png" alt="Image placeholder">
                   </div>
                   <div class="comment-body">
-                    <h3>John Doe</h3>
+                    <h3>Mr. Amit Patel</h3>
                     <div class="meta">July 03, 2020 at 2:21pm</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                    <p>I can't thank you enough for sharing your project journey through your blog. The comprehensive documentation, along with the before-and-after comparisons, have been invaluable in understanding the impact of your work. Your attention to user experience and seamless integration are evident, making it a pleasure to follow your projects.</p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
 
@@ -136,24 +137,24 @@
                   <ul class="children">
                     <li class="comment">
                       <div class="vcard bio">
-                        <img src="images/person_1.jpg" alt="Image placeholder">
+                        <img src="images/user.png" alt="Image placeholder">
                       </div>
                       <div class="comment-body">
-                        <h3>John Doe</h3>
+                        <h3>Ms. Neha Singh</h3>
                         <div class="meta">July 03, 2020 at 2:21pm</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                        <p>Your project blog is a treasure trove of knowledge and inspiration. The in-depth analysis and thought process behind each decision are enlightening. It's evident that you prioritize user-centric design and deliver solutions that truly address their needs. Your blog has become my go-to resource for industry insights.</p>
                         <p><a href="#" class="reply">Reply</a></p>
                       </div>
 
                       <ul class="children">
                         <li class="comment">
                           <div class="vcard bio">
-                            <img src="images/person_1.jpg" alt="Image placeholder">
+                            <img src="images/user.png" alt="Image placeholder">
                           </div>
                           <div class="comment-body">
-                            <h3>John Doe</h3>
+                            <h3>Mr. Rajesh Verma</h3>
                             <div class="meta">July 03, 2020 at 2:21pm</div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                            <p>Kudos to your project blog! The case studies and success stories you present are a testament to your skills and expertise. I appreciate the practical advice and best practices you share, as they have significantly improved my own approach to development. Your commitment to excellence shines through in every blog post.</p>
                             <p><a href="#" class="reply">Reply</a></p>
                           </div>
                         </li>
@@ -166,12 +167,12 @@
 
             <li class="comment">
               <div class="vcard bio">
-                <img src="images/person_1.jpg" alt="Image placeholder">
+                <img src="images/bg_three.png" alt="Image placeholder">
               </div>
               <div class="comment-body">
-                <h3>John Doe</h3>
+                <h3>Jitendra Sahu</h3>
                 <div class="meta">July 03, 2020 at 2:21pm</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                <p>Your blog on Android Development is an absolute gem! The detailed explanations and step-by-step tutorials have been incredibly helpful for me as a beginner developer. I appreciate how you break down complex concepts into easily understandable chunks, making it easier for me to grasp the fundamentals. The code samples and real-world examples you provide have truly accelerated my learning process. Keep up the excellent work and please continue sharing your expertise in the world of Android Development!</p>
                 <p><a href="#" class="reply">Reply</a></p>
               </div>
             </li>
