--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</nav>
 	<section id="home-section" class="hero">
 		<div class="home-slider owl-carousel">
-			<div class="slider-item">
+			<div class="slider-item" style="overflow-y: scroll; -webkit-overflow-scrolling: touch;">
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 
-			<div class="slider-item">
+			<div class="slider-item" style="overflow-y: scroll; -webkit-overflow-scrolling: touch;">
 				<div class="overlay"></div>
 				<div class="container-fluid px-md-0">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
