Blog Section Added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/animate.css">
+	<link rel="icon" type="image/x-icon" href="images/logo.png">
 	
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -495,7 +496,7 @@
 					<div class="w-100 py-4">
 						<h2>Have a project on your mind.</h2>
 						<p>Have a project on your mind? We're here to bring it to life! As skilled Software Developers specializing in Android and iOS, we're passionate about turning ideas into exceptional applications. Our team is dedicated to delivering tailored solutions that exceed your expectations. Let's collaborate and make your project a success. Get in touch with us today!</p>
-						<p class="mb-0"><a href="#" class="btn btn-white py-3 px-4">Contact me</a></p>
+						<p class="mb-0"><a href="#contact-section" class="btn btn-white py-3 px-4">Contact me</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-end">
@@ -697,7 +698,7 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+						<a href="blogOne.html" class="block-20" style="background-image: url('images/blogOne.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -707,13 +708,13 @@
 									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Best Practices for Developing Secure Android Applications</a></h3>
+							<h3 class="heading"><a href="blogOne.html">Best Practices for Developing Secure Android Applications</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+						<a href="blogTwo.html" class="block-20" style="background-image: url('images/image_2.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -723,13 +724,13 @@
 									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Exploring the Latest Features of iOS 14 for App Development</a></h3>
+							<h3 class="heading"><a href="blogTwo.html">Exploring the Latest Features of iOS 14 for App Development</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+						<a href="blogThree.html" class="block-20" style="background-image: url('images/image_3.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -739,7 +740,7 @@
 									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Building Cross-Platform Apps with React Native: Pros and Cons</a></h3>
+							<h3 class="heading"><a href="blogThree.html">Building Cross-Platform Apps with React Native: Pros and Cons</a></h3>
 						</div>
 					</div>
 				</div>
@@ -795,14 +796,13 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</section>
 
 	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-3">
-				<div class="col-md-17 heading-section text-center ftco-animate">
+				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">Contact us</span>
 					<h2 class="mb-4">Have a Project?</h2>
 					<p>Let us bring it to life! As experienced Software Developers specializing in Android and iOS app development, we have the skills and expertise to turn your ideas into reality. Whether you're a startup looking to build a cutting-edge mobile app or an established business seeking to enhance your digital presence, we've got you covered. Our team is dedicated to delivering tailor-made solutions that align with your goals and objectives. From ideation and design to development and deployment, we'll guide you through every step of the process, ensuring a seamless and successful project delivery. Get in touch with us today and let's discuss how we can bring your vision to fruition.</p>
