--- a/canvas-1.html
+++ b/canvas-1.html
@@ -100,12 +100,14 @@
     <!-- Header End -->
     <!-- Banner -->
     <section id="iq-home" class="iq-banner overview-block-pt iq-bg-over iq-over-blue-90 iq-parallax" data-jarallax='{"speed": 0.6}' style="background: url(images/bg/01.jpg);">
+        <!-- BACKGROUND PARTICLES -->
+        <div id="particles-js"></div>
         <div class="container-fluid">
             <div class="banner-text">
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 class="text-uppercase iq-font-white iq-tw-3">We are building <b class="iq-tw-7">software</b> to help</h1>
-                        <p class="iq-font-white iq-pt-15 iq-mb-40">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                        <p class="iq-font-white iq-pt-15 iq-mb-40">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         <div class="waves-box">
                             <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="iq-video popup-youtube"><i class="ion-ios-play-outline"></i></a>
                             <div class="iq-waves">
@@ -144,7 +146,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title">
                             <h3 class="title iq-tw-7">How it Works</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -254,7 +256,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title white">
                             <h3 class="title iq-tw-7">Great Screenshots</h3>
-                            <p class="iq-font-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p class="iq-font-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -264,22 +266,22 @@
                             <div class="slider-container">
                                 <div class="slider-content">
                                     <div class="slider-single">
-                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/01.jpg" alt="1" /></a>
+                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/01.jpg" alt="1"/></a>
                                     </div>
                                     <div class="slider-single">
-                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/02.jpg" alt="2" /></a>
+                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/02.jpg" alt="2"/></a>
                                     </div>
                                     <div class="slider-single">
-                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/03.jpg" alt="3" /></a>
+                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/03.jpg" alt="3"/></a>
                                     </div>
                                     <div class="slider-single">
-                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/04.jpg" alt="4" /></a>
+                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/04.jpg" alt="4"/></a>
                                     </div>
                                     <div class="slider-single">
-                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/05.jpg" alt="5" /></a>
+                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/05.jpg" alt="5"/></a>
                                     </div>
                                     <div class="slider-single">
-                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/06.jpg" alt="6" /></a>
+                                        <a href="images/screenshots/01.jpg" class="popup-img"><img class="slider-single-image" src="images/screenshots/06.jpg" alt="6"/></a>
                                     </div>
                                 </div>
                                 <a class="slider-left" href="javascript:void(0);"><i class="fa fa-angle-left"></i></a>
@@ -334,7 +336,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title">
                             <h3 class="title iq-tw-7">Sofbox Specialities </h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -500,7 +502,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title iq-mt-50">
                             <h3 class="title iq-tw-7">Loved By Our Customers</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -562,7 +564,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title">
                             <h3 class="title iq-tw-7">Affordable Price</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -644,7 +646,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title">
                             <h3 class="title iq-tw-7">Meet the Team</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -736,7 +738,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title white">
                             <h3 class="title iq-tw-7">Compare Services</h3>
-                            <p class="iq-font-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p class="iq-font-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -879,7 +881,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title">
                             <h3 class="title iq-tw-7">Frequently Asked Questions</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -935,7 +937,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title">
                             <h3 class="title iq-tw-7">Latest Blog Post</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley,</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley, </p>
                         </div>
                     </div>
                 </div>
@@ -1277,6 +1279,9 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Main js -->
     <script src="js/main.js"></script>
+    <!-- Particles -->
+    <script src="js/particles/particles.min.js"></script>
+    <script src="js/particles/app.js"></script>
     <!-- Google captcha code Js -->
     <script src='https://www.google.com/recaptcha/api.js'></script>
     <!-- Custom -->
