--- a/blog-single.html
+++ b/blog-single.html
@@ -7,7 +7,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <title>Sofbox - Responsive Software Landing Page</title>
             <!-- Favicon -->
-            <link rel="shortcut icon" href="images/favicon.ico" />
+            <link rel="shortcut icon" href="images/favicon.png" />
             <!-- Google Fonts -->
             <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;Raleway:300,400,500,600,700,800,900" rel="stylesheet">
             <!-- Bootstrap CSS -->
