--- a/MyResume/MyResume.html
+++ b/MyResume/MyResume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>Resume | Jitendra Sahu</title>
+	<title>Jitendra Sahu | Resume | Software Developer</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
