--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Jitendra Sahu | Profile</title>
+    <title>Jitendra Sahu | Software Developer</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png" />
     <!-- Google Fonts -->
@@ -107,7 +107,7 @@
             <div class="banner-text">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1 class="text-uppercase iq-font-white iq-tw-3">We are building <b class="iq-tw-7">software</b> to help</h1>
+                        <h1 class=" iq-font-white iq-tw-3">Welcome! I am </br><b class="iq-tw-7">Jitendra Sahu</b> </br>a Software Developer.</h1>
                         <p class="iq-font-white iq-pt-15 iq-mb-40">I am a skilled Software Developer specializing in Android and iOS app development. With expertise in both platforms, I create high-quality mobile applications that deliver exceptional user experiences. visit www.jeetendrasahu.in to see my work.</p>
                         <div class="waves-box">
                             <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="iq-video popup-youtube"><i class="ion-ios-play-outline"></i></a>
@@ -191,16 +191,16 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <h2 class="iq-tw-6 iq-mb-25">About Me !</h2>
-                        <p class="iq-font-15">Hello! I am Jitendra Kumar Sahu, a passionate Software Developer specializing in Android and iOS app development. With a knack for creating high-quality mobile applications, I strive to deliver exceptional user experiences through my work. Explore my projects at www.jeetendrasahu.in to see the innovative solutions I've developed.</p>
+                        <p class="iq-font-15">Hello! I am Jitendra Sahu, a passionate Software Developer specializing in Android and iOS app development. With a knack for creating high-quality mobile applications, I strive to deliver exceptional user experiences through my work. Explore my projects at www.jeetendrasahu.in to see the innovative solutions I've developed.</p>
                         <ul class="iq-mt-40 iq-list">
                             <li class="iq-tw-6"><i class="ion-android-done-all iq-mr-10 iq-font-blue iq-font-30"></i>
-                                <span class="iq-font-black">Name: Jitendra Kumar Sahu</span></li>
+                                <span class="iq-font-black">Name: Jitendra Sahu</span></li>
                             <li class="iq-tw-6"><i class="ion-android-done-all iq-mr-10 iq-font-blue iq-font-30"></i>
                                 <span class="iq-font-black">Date of Birth: December 01, 1998</span></li>
                             <li class="iq-tw-6"><i class="ion-android-done-all iq-mr-10 iq-font-blue iq-font-30"></i>
                                 <span class="iq-font-black">Address: Ansal Corporate Park, Sector 104 Noida, U.P. India</span></li>
                             <li class="iq-tw-6"><i class="ion-android-done-all iq-mr-10 iq-font-blue iq-font-30"></i>
-                                <span class="iq-font-black">Email: jeetendrasahu999@gmail.com</span></li>
+                                <span class="iq-font-black">Email: jeetendrasahu105@gmail.com</span></li>
                         </ul>
                         <h6 class="iq-tw-6 iq-mt-25">When I’m not coding, I enjoy music, traveling, watching movies, and playing sports.</h6>
                         <a href="MyResume/MyResume.html" target="_blank" class="button iq-mt-10">Download CV</a>
