--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </header>
     <!-- Header End -->
     <!-- Banner -->
-    <section id="iq-home" class="iq-banner overview-block-pt iq-bg-over iq-over-blue-90 iq-parallax" data-jarallax='{"speed": 0.6}' style="background: url(images/bg/01.jpg);">
+    <section id="iq-home" class="iq-banner overview-block-pt iq-bg-over iq-over-blue-90 iq-parallax" data-jarallax='{"speed": 0.3}' style="background: url(images/bg/01.jpg);" data-jarallax-video="m4v:./video/01.m4v,webm:./video/01.webm,ogv:./video/01.ogv">
         <!-- BACKGROUND PARTICLES -->
         <div id="particles-js"></div>
         <div class="container-fluid">
