--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#great-screenshots">Screenshots</a>
                                 </li>
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="#pricing">Pricing</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="#team">Team</a>
                                 </li>
@@ -154,30 +154,27 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-4">
                         <div class="iq-works-box text-left">
-                            <div class="step">1</div>
                             <div class="icon-bg text-center">
-                                <img src="images/services/icon1.png" class="img-fluid" alt="#">
+                                <img src="images/services/pic_1.png" class="img-fluid" alt="#">
                             </div>
-                            <h5 class="iq-tw-7 text-uppercase iq-mt-25 iq-mb-15">Android App Development</h5>
+                            <h5 class="iq-tw-7 iq-mt-25 iq-mb-15">Android App Development</h5>
                             <p>Unlock the potential of the Android ecosystem with our innovative app development services. We design and build high-performance Android apps that offer seamless user experiences, tailored to meet your business needs.</p>
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-4 r-mt-30">
                         <div class="iq-works-box text-left">
-                            <div class="step">2</div>
                             <div class="icon-bg text-center">
-                                <img src="images/services/icon2.png" class="img-fluid" alt="#">
+                                <img src="images/services/pic_2.png" class="img-fluid" alt="#">
                             </div>
-                            <h5 class="iq-tw-7 text-uppercase iq-mt-25 iq-mb-15">iOS App Development</h5>
+                            <h5 class="iq-tw-7 iq-mt-25 iq-mb-15">iOS App Development</h5>
                             <p>Transform your vision into reality with our top-tier iOS app development services. We create intuitive and visually stunning iOS applications that provide exceptional user experiences and align with your strategic goals.</p>
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-4 r-mt-30">
                         <div class="iq-works-box text-left">
-                            <div class="step">3</div>
                             <div class="icon-bg text-center">
-                                <img src="images/services/icon3.png" class="img-fluid" alt="#"></div>
-                            <h5 class="iq-tw-7 text-uppercase iq-mt-25 iq-mb-15">Hybrid App Development</h5>
+                                <img src="images/services/pic_3.png" class="img-fluid" alt="#"></div>
+                            <h5 class="iq-tw-7 iq-mt-25 iq-mb-15">Hybrid App Development</h5>
                             <p>Achieve cross-platform success with our hybrid app development services. We build versatile applications that perform seamlessly across both Android and iOS devices, ensuring broad reach and consistent user experiences.</p>
                         </div>
                     </div>
@@ -460,7 +457,7 @@
         </section>
         <!-- Sofbox Specialities END -->
         <!-- Counter -->
-        <div class="iq-pt-80 iq-counter-box iq-bg-over iq-over-blue-90 iq-font-white iq-parallax" data-jarallax='{"speed": 0.6}' style="background: url(images/bg/02.jpg);">
+        <div class="iq-pt-80 iq-counter-box iq-bg-over iq-over-blue-90 iq-font-white iq-parallax" data-jarallax='{"speed": 0.6}' style="background: url(images/bg/02.jpg);" data-jarallax-video="m4v:./video/01.m4v,webm:./video/01.webm,ogv:./video/01.ogv">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 text-left">
