Some changes in index page

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </header>
     <!-- Header End -->
     <!-- Banner -->
-    <section id="iq-home" class="iq-banner overview-block-pt iq-bg-over iq-over-blue-90 iq-parallax" data-jarallax='{"speed": 0.3}' style="background: url(images/bg/01.jpg);" data-jarallax-video="m4v:./video/01.m4v,webm:./video/01.webm,ogv:./video/01.ogv">
+    <section id="iq-home" class="iq-banner overview-block-pt iq-bg-over iq-over-blue-90 iq-parallax" data-jarallax='{"speed": 0.3}' data-jarallax-video="m4v:./video/01.m4v,webm:./video/01.webm,ogv:./video/01.ogv">
         <!-- BACKGROUND PARTICLES -->
         <div id="particles-js"></div>
         <div class="container-fluid">
@@ -147,7 +147,7 @@
                     <div class="col-sm-12">
                         <div class="heading-title">
                             <h3 class="title iq-tw-7">Excellence in Mobile App Development !</h3>
-                            <p>Over 5+ years of experience in software development, I specialize in creating high-performance, user-friendly mobile applications for both Android and iOS platforms. My expertise lies in developing robust, scalable solutions that enhance user experience and meet client requirements effectively. Passionate about technology and continuous learning, I am dedicated to delivering innovative and reliable software solutions.</p>
+                            <p>Over 7+ years of experience in software development, I specialize in creating high-performance, user-friendly mobile applications for both Android and iOS platforms. My expertise lies in developing robust, scalable solutions that enhance user experience and meet client requirements effectively. Passionate about technology and continuous learning, I am dedicated to delivering innovative and reliable software solutions.</p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
         </section>
         <!-- How it Works END -->
         <!-- Who is Sofbox ? -->
-        <section id="how-works" class="overview-block-ptb how-works">
+        <section id="how-works" class="overview-block-ptb how-works bg-color-ab">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -264,7 +264,7 @@
         </section>
         <!-- Software Features END -->
         <!-- Great Screenshots -->
-        <section id="great-screenshots" class="overview-block-ptb iq-bg-over  iq-over-blue-80 iq-screenshots iq-parallax" data-jarallax='{"speed": 0.6}' style="background: url(images/bg/07.jpg);">
+        <section id="great-screenshots" class="overview-block-ptb iq-bg-over  iq-over-blue-80 iq-screenshots iq-parallax" data-jarallax='{"speed": 0.3}' data-jarallax-video="m4v:./video/01.m4v,webm:./video/01.webm,ogv:./video/01.ogv">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -464,7 +464,7 @@
                         <div class="counter"> <i class="ion-ios-folder-outline " aria-hidden="true"></i>
                             <div class="counter-date">
                                 <label class="iq-font-white text-uppercase">PROJECT COMPLETE</label>
-                                <span class="timer iq-tw-7" data-to="132" data-speed="1000">132</span>
+                                <span class="timer iq-tw-7" data-to="139" data-speed="3000">139</span>
                             </div>
                         </div>
                     </div>
@@ -472,7 +472,7 @@
                         <div class="counter"> <i class="ion-ios-paper-outline " aria-hidden="true"></i>
                             <div class="counter-date">
                                 <label class="iq-font-white text-uppercase">HAPPY CLIENTS</label>
-                                <span class="timer iq-tw-7" data-to="119" data-speed="1000">119</span>
+                                <span class="timer iq-tw-7" data-to="119" data-speed="3000">119</span>
                             </div>
                         </div>
                     </div>
@@ -480,7 +480,7 @@
                         <div class="counter"> <i class="ion-ios-person-outline " aria-hidden="true"></i>
                             <div class="counter-date">
                                 <label class="iq-font-white text-uppercase">CUPS OF COFFEE</label>
-                                <span class="timer iq-tw-7" data-to="43" data-speed="1000">43</span>
+                                <span class="timer iq-tw-7" data-to="63" data-speed="3000">63</span>
                             </div>
                         </div>
                     </div>
@@ -488,7 +488,7 @@
                         <div class="counter"> <i class="ion-ios-star " aria-hidden="true"></i>
                             <div class="counter-date">
                                 <label class="iq-font-white text-uppercase">YEARS EXPERIENCED</label>
-                                <span class="timer iq-tw-7" data-to="6" data-speed="1000">6</span>
+                                <span class="timer iq-tw-7" data-to="7" data-speed="3000">7</span>
                             </div>
                         </div>
                     </div>
@@ -664,7 +664,7 @@
         </section> -->
         <!-- Affordable Price END -->
         <!-- Meet the Team -->
-        <section id="team" class="overview-block-ptb grey-bg">
+        <section id="team" class="overview-block-ptb light-yellow-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -676,14 +676,14 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-lg-3 col-md-6">
-                        <div class="iq-team grey-bg">
+                        <div class="iq-team grey-bg card-div">
                             <div class="iq-team-img">
-                                <img src="images/team/pic_1.png" class="img-fluid center-block" alt="#">
+                                <img src="images/team/team_1.png" class="img-fluid center-block" alt="#">
                             </div>
                             <div class="iq-team-info text-center">
                                 <h5 class="iq-font-black iq-tw-6">Jitendra Sahu</h5>
                                 <span class="team-post iq-tw-5">Sr. Software Developer</span></br>
-                                <span class="team-post iq-tw-5">Android & iOS</span>
+                                <span class="team-post iq-tw-5">Mobile App Developer</span>
                             </div>
                             <div class="share">
                                 <ul>
@@ -696,9 +696,9 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-3 col-md-6 r4-mt-30">
-                        <div class="iq-team grey-bg">
+                        <div class="iq-team grey-bg card-div">
                             <div class="iq-team-img">
-                                <img src="images/team/pic_2.png" class="img-fluid center-block" alt="#">
+                                <img src="images/team/team_2.png" class="img-fluid center-block" alt="#">
                             </div>
                             <div class="iq-team-info text-center">
                                 <h5 class="iq-font-black iq-tw-6">Rinkal Oberoi</h5>
@@ -716,14 +716,14 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-3 col-md-6 r-mt-30">
-                        <div class="iq-team grey-bg">
+                        <div class="iq-team grey-bg card-div">
                             <div class="iq-team-img">
-                                <img src="images/team/pic_2.png" class="img-fluid center-block" alt="#">
+                                <img src="images/team/team_4.png" class="img-fluid center-block" alt="#">
                             </div>
                             <div class="iq-team-info text-center">
-                                <h5 class="iq-font-black iq-tw-6">Mr. Rajesh Verma</h5>
-                                <span class="team-post iq-tw-5">Project Manager</span></br>
-                                <span class="team-post iq-tw-5">Implementation & Sales</span>
+                                <h5 class="iq-font-black iq-tw-6">Ms. Neha Singh</h5>
+                                <span class="team-post iq-tw-5">Software Developer</span></br>
+                                <span class="team-post iq-tw-5">JAVA, Spring Boot</span>
                             </div>
                             <div class="share">
                                 <ul>
@@ -736,14 +736,14 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-lg-3 col-md-6 r-mt-30">
-                        <div class="iq-team grey-bg">
+                        <div class="iq-team grey-bg card-div">
                             <div class="iq-team-img">
-                                <img src="images/team/pic_2.png" class="img-fluid center-block" alt="#">
+                                <img src="images/team/team_3.png" class="img-fluid center-block" alt="#">
                             </div>
                             <div class="iq-team-info text-center">
-                                <h5 class="iq-font-black iq-tw-6">Ms. Neha Singh</h5>
-                                <span class="team-post iq-tw-5">Software Developer</span></br>
-                                <span class="team-post iq-tw-5">JAVA, Spring Boot</span>
+                                <h5 class="iq-font-black iq-tw-6">Mr. Oliver Davies</h5>
+                                <span class="team-post iq-tw-5">Project Manager</span></br>
+                                <span class="team-post iq-tw-5">Implementation & Sales</span>
                             </div>
                             <div class="share">
                                 <ul>
@@ -1146,7 +1146,7 @@
     <!-- Footer -->
     <footer>
         <!-- Subscribe Our Newsletter -->
-        <section class="iq-ptb-80 iq-newsletter iq-bg-over iq-over-blue-90 jarallax" data-jarallax-video="m4v:./video/01.m4v,webm:./video/01.webm,ogv:./video/01.ogv">
+        <!-- <section class="iq-ptb-80 iq-newsletter iq-bg-over iq-over-blue-90 jarallax" data-jarallax-video="m4v:./video/01.m4v,webm:./video/01.webm,ogv:./video/01.ogv">
             <div class="container">
                 
 
@@ -1170,14 +1170,14 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Subscribe Our Newsletter END -->
         <!-- Footer Info -->
         <section id="contact-us" class="footer-info white-bg">
             <div class="container">
                 <div class="row justify-content-end">
                     <div class="col-md-6 col-lg-4">
-                        <div class="iq-get-in">
+                        <div class="iq-get-in card-div pd-20">
                             <h4 class="iq-tw-7 iq-mb-20">Get in Touch</h4>
                             <div id="formmessage">Success/Error Message Goes Here !</div>
                             <form id="contact" method="post">
@@ -1193,9 +1193,6 @@
                                     </div>
                                     <div class="section-field textarea">
                                         <textarea id="contact_message" class="input-message require" placeholder="Comment*" rows="5" name="message"></textarea>
-                                    </div>
-                                    <div class="section-field iq-mt-20">
-                                        <div class="g-recaptcha" data-sitekey="6Lc5XV4UAAAAAJzUmGomye9Peru8lXyzT22FH0lX"></div>
                                     </div>
                                     <button id="submit" name="submit" type="submit" value="Send" class="button iq-mt-15">Send Message</button>
                                     <div class="alert alert-success alert-dismissible fade show" role="alert" id="success">
@@ -1216,7 +1213,8 @@
                 allowfullscreen>
 </iframe>
         </section>
-        <section class="footer-info iq-pt-60">
+        
+        <section class="footer-info iq-pt-200">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-lg-3">
@@ -1237,7 +1235,7 @@
                             </div>
                             <div class="footer-content">
                                 <h4 class="iq-tw-6 iq-pb-10">Phone</h4>
-                                <p>+91 9598****44
+                                <p>+91 9598542444
                                     <br>Mon-Fri 8:00am - 8:00pm
                                     <br>
                                 </p>
@@ -1251,7 +1249,7 @@
                             </div>
                             <div class="footer-content">
                                 <h4 class="iq-tw-6 iq-pb-10">Mail</h4>
-                                <p>jeetendrasahu@gmail.com
+                                <p>jeetendrasahu105@gmail.com
                                     <br>24 X 7 online support
                                     <br>
                                 </p>
